feat: minor changes in Board

--- a/src/Board/CMakeLists.txt
+++ b/src/Board/CMakeLists.txt
@@ -1,6 +1,12 @@
-add_library(Board INTERFACE)
+add_library(Board src/Board.cpp)
 
-target_include_directories(BitOperation
+target_include_directories(Board
     PUBLIC
         ${CMAKE_CURRENT_SOURCE_DIR}/inc
+)
+
+target_link_libraries(Board
+    PUBLIC 
+        BitOperation
+        BoardUtils
 )
