minor chnages in google tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,9 @@ add_subdirectory(src/Board)
 add_subdirectory(src/BoardUtils)
 add_subdirectory(src/PieceMap)
 add_subdirectory(src/StateInfo)
+add_subdirectory(src/Shared)
+add_subdirectory(src/Debug)
+add_subdirectory(src/MoveGenerator)
 
 add_executable(Barkoz-Tempo src/main.cpp)
 
@@ -21,3 +24,28 @@ target_link_libraries(Barkoz-Tempo
         StateInfo
         PieceMap
 )
+
+# tests
+
+include(FetchContent)
+FetchContent_Declare(
+  googletest
+  URL https://github.com/google/googletest/archive/03597a01ee50ed33e9dfd640b249b4be3799d395.zip
+)
+
+FetchContent_MakeAvailable(googletest)
+
+enable_testing()
+
+add_executable(
+  moveUtility_test
+  tests/unit_tests/moveUtility_test.cc
+)
+target_link_libraries(
+  moveUtility_test
+  GTest::gtest_main
+  MoveGenerator
+)
+
+include(GoogleTest)
+gtest_discover_tests(moveUtility_test)
