--- a/src/Debug/CMakeLists.txt
+++ b/src/Debug/CMakeLists.txt
@@ -4,3 +4,9 @@ target_include_directories(Debug
     INTERFACE
         ${CMAKE_CURRENT_SOURCE_DIR}
 )
+
+target_link_libraries(
+    Debug
+    INTERFACE
+    Shared
+)
