--- a/src/BitOperation/CMakeLists.txt
+++ b/src/BitOperation/CMakeLists.txt
@@ -1,8 +1,7 @@
-add_library(BitOperation
-    src/BitOperation.cpp
-)
+add_library(BitOperation INTERFACE)
 
+# there is no need to type including "BitOperation/BitOperation" when is only 1 file module
+# so could include this directory
 target_include_directories(BitOperation
-    PUBLIC
-        ${CMAKE_CURRENT_SOURCE_DIR}/inc
+    INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}
 )
