--- a/src/Debug/CMakeLists.txt
+++ b/src/Debug/CMakeLists.txt
@@ -1,12 +1,5 @@
 add_library(Debug INTERFACE)
 
-target_include_directories(Debug
-    INTERFACE
-        ${CMAKE_CURRENT_SOURCE_DIR}
-)
-
-target_link_libraries(
-    Debug
-    INTERFACE
-    Shared
+target_link_libraries(Debug
+    INTERFACE Shared
 )
