--- a/src/MoveGenerator/CMakeLists.txt
+++ b/src/MoveGenerator/CMakeLists.txt
@@ -1,15 +1,7 @@
 add_library(MoveGenerator INTERFACE)
 
-target_include_directories(
-    MoveGenerator
-    INTERFACE
-    ${CMAKE_CURRENT_SOURCE_DIR}
-)
-
-target_link_libraries(
-    MoveGenerator
-    INTERFACE
-    Board
-    Debug
-    BitOperation
+target_link_libraries(MoveGenerator
+    INTERFACE Board
+    INTERFACE Debug
+    INTERFACE BitOperation
 )
