--- a/src/StateInfo/CMakeLists.txt
+++ b/src/StateInfo/CMakeLists.txt
@@ -1,11 +1,9 @@
 add_library(StateInfo INTERFACE)
 
 target_include_directories(StateInfo
-    INTERFACE
-        ${CMAKE_CURRENT_SOURCE_DIR}
+    INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}
 )
 
 target_link_libraries(StateInfo
-    INTERFACE
-    Board
+    INTERFACE Board
 )
