--- a/src/Board/CMakeLists.txt
+++ b/src/Board/CMakeLists.txt
@@ -1,10 +1,14 @@
-add_library(Board INTERFACE)
+add_library(Board 
+    Board.cpp
+)
 
 # see CMakeLists file comment in BitOperation module
 target_include_directories(Board
-    INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}
+    PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}
 )
 
 target_link_libraries(Board
-    INTERFACE BitOperation    # have to be public -> h file use this
+    PUBLIC BitOperation
+    PUBLIC MoveGeneration
+    PRIVATE PieceMap
 )
