--- a/src/PieceMap/CMakeLists.txt
+++ b/src/PieceMap/CMakeLists.txt
@@ -1,9 +1,11 @@
-add_library(PieceMap INTERFACE)
+add_library(PieceMap
+    PieceMap.cpp
+)
 
 target_include_directories(PieceMap
-    INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}
+    PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}
 )
 
 target_link_libraries(PieceMap
-    INTERFACE Board
+    PUBLIC Board
 )
