--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,6 +27,7 @@ set(MODULE_DIRS
 	src/PieceMap
 	src/Shared
 	src/StateInfo
+	src/MoveParser
 )
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/src)
@@ -41,7 +42,7 @@ target_link_libraries(Barkoz-Tempo
         Board
         MoveGeneration
 		PieceMap
-		# Shared
+		MoveParser
 )
 
 
