--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,8 +29,7 @@ set(MODULE_DIRS
 	src/StateInfo
 	src/MoveGeneration/MoveParser
 	src/MoveGeneration/Perft
-	src/Search
-	src/Evaluation
+	src/Engine
 )
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/src)
@@ -46,7 +45,7 @@ target_link_libraries(Barkoz-Tempo
         MoveGeneration
 		PieceMap
 		MoveParser
-		Search
+		Engine
 )
 
 
