--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,12 +1,25 @@
-name: CI - Build
+name: CI - Build & Test
 run-name: Triggered by ${{ github.actor }} on ${{ github.event_name }}
 on: [push, workflow_dispatch]
+
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          submodules: recursive
+
+      - name: Set up Python 3.10
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.10'
+
+      - name: Install Python dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r tests/functional_tests/requirements.txt
 
       - name: Create build directory
         run: mkdir build
@@ -16,10 +29,12 @@ jobs:
         working-directory: build
 
       - name: Build
-        run: make
+        run: make -j$(nproc)
         working-directory: build
 
-      - name: Run Tests
-        run: ctest
+      - name: Run C++ Unit Tests
+        run: ctest --output-on-failure
         working-directory: build
 
+      - name: Run Python Perft Tests
+        run: pytest tests/functional_tests/perft/test_perft.py -v
